Update README.md
updated to run directions